--- a/scrapper/src/main/resources/application.yml
+++ b/scrapper/src/main/resources/application.yml
@@ -1,2 +1,19 @@
 app:
   test: hi
+  scheduler:
+    interval: 5000
+
+springdoc:
+  swagger-ui:
+    path: /swagger-ui.html
+
+  api-docs:
+    path: /api-docs
+
+
+
+spring:
+  application:
+    name: test
+
+
