--- a/bot/src/main/resources/application.yml
+++ b/bot/src/main/resources/application.yml
@@ -8,7 +8,14 @@ springdoc:
   api-docs:
     path: /api-docs
 
+server:
+  port: 8081
 
 spring:
   application:
     name: test
+
+telegram:
+  bot-name: ${BOT_NAME}
+  bot-token: ${BOT_TOKEN}
+  api-url: "https://api.telegram.org/"
