--- a/migration/migrations/changelog/create_database/_changelog.yaml
+++ b/migration/migrations/changelog/create_database/_changelog.yaml
@@ -7,11 +7,8 @@ databaseChangeLog:
             tag: CREATE_DATABASE
 
   - include:
-      file: create_chat_table.sql
-      relativeToChangelogFile: true
-  - include:
-      file: create_link_type_table.sql
-      relativeToChangelogFile: true
-  - include:
       file: create_link_table.sql
+      relativeToChangelogFile: true
+  - include:
+      file: create_track_link_table.sql
       relativeToChangelogFile: true
