--- a/migration/docker-compose.yaml
+++ b/migration/docker-compose.yaml
@@ -9,12 +9,14 @@ services:
       - "5432:5432"
 
     environment:
-      - POSTGRES_USER=admin
+      - POSTGRES_USER=arina
       - POSTGRES_PASSWORD=0000
-      - POSTGRES_DB=scrapperDB
+      - POSTGRES_DB=scrapper
     restart: always
     networks:
       - backend
+    volumes:
+      - ./postgres_data:/var/lib/postgresql/data/
 
   liquibase-migrations:
     image: liquibase/liquibase:4.18
@@ -24,12 +26,12 @@ services:
       - --hub-mode=off
       - --changelog-file=master.yaml
       - --driver=org.postgresql.Driver
-      - --url=jdbc:postgresql://postgres:5432/scrapperDB
-      - --username=admin
+      - --url=jdbc:postgresql://postgres:5432/scrapper
+      - --username=arina
       - --password=0000
       - update
     volumes:
-      - ./migrations:/liquibase/changelog
+        - ./migrations:/liquibase/changelog
     networks:
       - backend
 
