--- a/migration/migrations/changelog/create_database/_changelog.yaml
+++ b/migration/migrations/changelog/create_database/_changelog.yaml
@@ -10,5 +10,8 @@ databaseChangeLog:
       file: create_link_table.sql
       relativeToChangelogFile: true
   - include:
-      file: create_track_link_table.sql
+      file: create_chat_table.sql
+      relativeToChangelogFile: true
+  - include:
+      file: create_links_list_table.sql
       relativeToChangelogFile: true
