--- a/scrapper/src/main/resources/application.yml
+++ b/scrapper/src/main/resources/application.yml
@@ -17,6 +17,13 @@ spring:
   application:
     name: test
 
+  datasource:
+    url: jdbc:postgresql://postgres:5432/scrapper
+    username: arina
+    password: 0000
+    driver-class-name: org.postgresql.Driver
+
+
 
 
 
