test for jpa services

--- a/migration/docker-compose.yaml
+++ b/migration/docker-compose.yaml
@@ -34,6 +34,7 @@ services:
         - ./migrations:/liquibase/changelog
     networks:
       - backend
+    restart: on-failure
 
 networks:
   backend: {}
