--- a/migration/docker-compose.yaml
+++ b/migration/docker-compose.yaml
@@ -6,7 +6,7 @@ services:
     image: 'postgres:15.2-alpine'
     container_name: postgres
     ports:
-      - "5432:5432"
+      - "5433:5432"
 
     environment:
       - POSTGRES_USER=arina
@@ -35,6 +35,19 @@ services:
     networks:
       - backend
     restart: on-failure
+
+  rabbitmq:
+    image: rabbitmq:3-management
+    hostname: rabbitmq
+    restart: always
+    environment:
+      RABBITMQ_DEFAULT_USER: guest
+      RABBITMQ_DEFAULT_PASS: guest
+    ports:
+      - "5672:5672"
+      - "15672:15672"
+    volumes:
+      - ./rabbitmq_data:/var/lib/rabbitmq
 
 networks:
   backend: {}
