--- a/.github/workflows/scrapper.yml
+++ b/.github/workflows/scrapper.yml
@@ -33,3 +33,10 @@ jobs:
       - name: Build Docker image
         run: docker build -f scrapper.dockerfile -t ${{ env.REGISTRY}}/${{ env.AUTHOR }}/${{ env.IMAGE_NAME }}:latest .
 
+      - name: Log in to the Container registry
+          uses: docker/login-action@v1
+          with:
+            registry: ${{ env.REGISTRY }}
+            username: ${{ github.actor }}
+            password: ${{ secrets.GITHUB_TOKEN }}
+
