--- a/.github/workflows/scrapper.yml
+++ b/.github/workflows/scrapper.yml
@@ -40,3 +40,6 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: Push Docker image
+        run: docker push ${{ env.REGISTRY}}/${{ env.AUTHOR }}/${{ env.IMAGE_NAME }}:latest
+
