--- a/.github/workflows/scrapper.yml
+++ b/.github/workflows/scrapper.yml
@@ -57,4 +57,4 @@ jobs:
           cache: maven
 
       - name: Run Checkstyle
-        run: mvn -pl bot -am checkstyle:check
+        run: mvn -pl bot -am -X checkstyle:check
