--- a/.gitignore
+++ b/.gitignore
@@ -14,5 +14,7 @@ buildNumber.properties
 *.iml
 
 
-/migration/rabbitmq_data/
-/migration/postgres_data/
+/volumes/rabbitmq_data/
+/volumes/postgres_data/
+/volumes/prometheus/
+/volumes/grafana/
