--- a/bot/src/main/resources/application.yml
+++ b/bot/src/main/resources/application.yml
@@ -3,8 +3,6 @@ app-bot:
   queue: qScrapper
   exchange: exScrapper
 
-
-
 springdoc:
   swagger-ui:
     path: /swagger-ui.html
@@ -17,7 +15,7 @@ server:
 
 spring:
   application:
-    name: test
+    name: botApp
   rabbitmq:
     listener:
       simple:
@@ -27,3 +25,33 @@ telegram:
   bot-name: ${BOT_NAME}
   bot-token: ${BOT_TOKEN}
   api-url: "https://api.telegram.org/"
+
+
+management:
+    metrics:
+        tags:
+            application: ${spring.application.name}
+    server:
+        port: 8081
+    endpoints:
+        web:
+            base-path: /
+            path-mapping:
+                prometheus: metrics
+            exposure:
+                include: "*"
+        enabled-by-default: false
+
+    endpoint:
+        info:
+            enabled: true
+        health:
+            enabled: true
+        metrics:
+            enabled: true
+        prometheus:
+            enabled: true
+    prometheus:
+        metrics:
+            export:
+                enabled: true
